--- a/produtos.html
+++ b/produtos.html
@@ -52,9 +52,14 @@
                 <p class="preco-produto">R$ 35,00</p>
             </li>
         </ul>
-
-
     </main>
+
+    <footer>
+        <img src="imagens/logo-branco.png" alt="">
+        <p class="copyright">&copy; Copyright Barbearia Lucas - 2019</p>
+    </footer>
     
 </body>
+
+
 </html>
