Pagina de Contato

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
 </div>
 
+<footer>
+    <img src="imagens/logo-branco.png" alt="logo-rodape">
+    <p class="copyright">&copy; Copyright Barbearia Lucas - 2019</p>
+</footer>
+
 
 </body>
 </html>
